# coinbot

./: .gitignore  LICENSE.md  README.md  app.py  coinbot.service  coins.xlsm  create_storage.py  pyproject.toml  vectorstorage.npz
coinbot/: __init__.py  app.py  core.py  db.py  formatting.py  llm.py  metadata.py  slack.py  utils.py  vectorstorage.py
data/: coins.csv  latest_collection.csv  translations.json
scripts/: create_storage.py  scrape_specials.py  scrape_specials_2euro.py  wikitable.py
