[tool.poetry]
name = "coinbot"
version = "0.0.1"
description = "Telegram bot for coin collection"
authors = ["jannisborn <jab@zurich.ibm.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
Flask = "^2.0.1"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
marimo = "^0.2.1"
requests = "^2.31.0"
thefuzz = "^0.22.1"
countrynames = "^1.15.3"
pycountry = "^23.12.11"
loguru = "^0.7.2"
slackclient = "^2.9.4"
numpy = "^1.26.4"
jupyter = "^1.0.0"
typer = "^0.12.3"
levenshtein = "^0.25.1"
lxml = "^5.2.1"
python-box = "^7.2.0"
together = "^1.2.5"
python-telegram-bot = "13.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
