[project]
name = "coinbot"
version = "0.0.1"
description = "Telegram bot for coin collection"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "jannisborn", email = "jannis.born@gmx.de" }]

dependencies = [
  "Flask>=2.0.1,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "openpyxl>=3.1.2,<4.0.0",
  "marimo>=0.2.1,<1.0.0",
  "requests>=2.31.0,<3.0.0",
  "thefuzz>=0.22.1,<1.0.0",
  "countrynames>=1.15.3,<2.0.0",
  "pycountry>=23.12.11,<24.0.0",
  "loguru>=0.7.2,<1.0.0",
  "slackclient>=2.9.4,<3.0.0",
  "numpy>=1.26.4,<2.0.0",
  "jupyter>=1.0.0,<2.0.0",
  "typer>=0.12.3,<1.0.0",
  "levenshtein>=0.25.1,<1.0.0",
  "lxml>=5.2.1,<6.0.0",
  "python-box>=7.2.0,<8.0.0",
  "together>=1.2.5,<2.0.0",
  "python-telegram-bot==13.7",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["coinbot*"]
exclude = ["data*", "assets*", "tests*"]
